Tried increasing timeout

--- a/core/controller/src/main/resources/application.conf
+++ b/core/controller/src/main/resources/application.conf
@@ -32,7 +32,7 @@ akka.http {
     # The controller holds connections up to 60s for blocking invokes, and
     # all other operations are expected to complete quickly. We allow a grace
     # period in addition to the blocking invoke timeout.
-    request-timeout = 10m
+    request-timeout = infinite
 
     # The maximum number of concurrently accepted connections when using the
     # `Http().bindAndHandle` methods.
@@ -60,7 +60,7 @@ akka.http {
     #
     # Explaining the set value:
     # This must be greater than the request timeout.
-    idle-timeout = 70s
+    idle-timeout = infinite
 
     # Description:
     # Enables/disables automatic handling of HEAD requests.
